kubernetes/helm-rancher/hr-rancher-svc.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-ui
  namespace: cattle-system
spec:
  parentRefs:
  - name: private-gateway
    namespace: gateways
  hostnames:
  - rancher.hyrsh.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rancher
      port: 80
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
