kubernetes/helm-rancher/httproute-rancher.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-ui
  namespace: cattle-system
spec:
  hostnames:
  - rancher.hyrsh.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gateway
    namespace: gateways
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rancher
      port: 80
      weight: 1
    filters:
    - cors:
        allowCredentials: true
        allowOrigins:
        - '*'
        maxAge: 5
        allowMethods:
        - OPTIONS
        - GET
        - POST
        - PUT
        - DELETE
        - PATCH
        - CONNECT
        - HEAD
      type: CORS
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: "Access-Control-Allow-Origin"
          value: "*"
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: "Access-Control-Allow-Origin"
          value: "https://rancher.m0rpheus.ch"
        - name: "Access-Control-Allow-Credentials"
          value: "true"
        - name: "Access-Control-Allow-Methods"
          value: "GET, PUT, OPTIONS, POST, DELETE"
        - name: "Access-Control-Allow-Headers"
          value: "X-Forwarded-Host, X-Forwarded-For, Origin, Accept, Authorization, Content-Type, Host"
    matches:
    - path:
        type: PathPrefix
        value: /
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
